loop-chaos/test-3-minimal-agnhost-pods.yaml
# pods
apiVersion: v1
kind: Pod
metadata:
  labels:
    pod: a
  name: a
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
  nodeSelector:
    vm: "0"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    pod: b
  name: b
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
  nodeSelector:
    vm: "0"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    pod: c
  name: c
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
  nodeSelector:
    vm: "0"
---
# services
apiVersion: v1
kind: Service
metadata:
  name: s-a
spec:
  ports:
  - name: service-port-tcp-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    pod: a
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: s-b
spec:
  ports:
  - name: service-port-tcp-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    pod: b
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: s-c
spec:
  ports:
  - name: service-port-tcp-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    pod: c
  type: ClusterIP
